# test

./: .gitignore  README.md  document text  document.rtf
test/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
test/app/: __init__.py  config.py
test/app/api/: __init__.py  container.py
test/app/api/auth/: __init__.py
test/app/api/routes/: __init__.py  news.py  users.py
test/app/core/news/entities/: news_article.py
test/app/core/news/protocols/: news_repository.py
test/app/core/news/services/: exceptions.py  news_article_service.py
test/app/core/users/entities/: user.py
test/app/core/users/protocols/: user_repository.py
test/app/core/users/services/: exceptions.py  user_service.py
test/app/infraestructure/database/: mongodb.py  seed.py
test/app/infraestructure/database/models/: __init__.py  news.py  users.py
test/app/infraestructure/database/repositories/: news_articles_repository.py  user_repository.py
test/tests/: pytest.ini
test/tests/integrations/: conftest.py
test/tests/integrations/routes/: test_news.py  test_users.py
